[tool.poetry]
name = "ecosuite-python"
version = "2024-08"
description = "A client library for accessing Ecosuite API"
authors = []
readme = "README.md"
packages = [
    {include = "ecosuite_python"},
]
include = ["CHANGELOG.md", "ecosuite_python/py.typed"]


[tool.poetry.dependencies]
python = "^3.8"
httpx = ">=0.20.0,<0.28.0"
attrs = ">=21.3.0"
python-dateutil = "^2.8.0"
pycognito = "^2024.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]
